--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,36 @@ body {
     border-radius: 50%;
     background-color: white;
 }
+
+.triangle {
+    width: 0; 
+    height: 0; 
+    border-left: 20px solid transparent;
+    border-right:20px solid transparent;
+    border-bottom: 20px solid white;
+    position: absolute;
+}
+
+.square {
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    position: absolute;
+}
+
+.shapeName {
+    width: 100%;
+    height: 10%;
+    background-color: aliceblue;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    top: 0px;
+}
+
+#name {
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+}
